# ids721-mini10

./: README.md
yx248-mini10/: sentiment.csv
yx248-mini10/backup/0/: Dockerfile  main.rs
yx248-mini10/backup/1/: Dockerfile
yx248-mini10/backup/1/src/: main.rs
yx248-mini10/backup/2/rust_lambda_hf/: Cargo.toml
yx248-mini10/backup/fin/: README.md
yx248-mini10/backup/fin/rust_lambda_hf/: Cargo.toml  Dockerfile
yx248-mini10/backup/fin/rust_lambda_hf/src/: main.rs
yx248-mini10/rust_lambda_hf/: Dockerfile
yx248-mini10/rust_lambda_hf/src/: lib_o.rs  main.rs
yx248-mini10/rust_lambda_hf_0_test_error/: Cargo.toml  Makefile
yx248-mini10/rust_lambda_hf_0_test_error/src/: lib.rs  main.rs
