[package]
name = "rust_lambda_hf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "full"] }
tower = "0.4.13"
async-trait = "0.1.50"
lambda_runtime = "0.4.1"
rust-bert = "0.20.0"
clap = { version = "4.0.32", features = ["derive"] }
sqlite = "0.30.3"
# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# s3
aws-smithy-runtime-api = "1.2.1"
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"
csv = "1.1"
# openssl
openssl = { version = "0.10", features = ["vendored"] }
# thiserror
thiserror = "1.0"
